<resources>
    <!-- Generales -->
    <string name="app_name">Seamos Mejores Maestros</string>
    <string name="title_activity_main">Inicio</string>
    <string name="title_activity_asignaciones">Asignaciones</string>
    <string name="title_activity_publicadores">Publicadores</string>
    <string name="title_activity_ver">Detalles Publicador</string>
    <string name="title_activity_agregar">Agregar Publicador</string>
    <string name="title_activity_editar">Editar Publicador</string>
    <string name="title_activity_sustituir">Sustituciones</string>
    <string name="title_activity_resumen">Resumen de las asignaciones</string>
    <string name="title_activity_organigrama">Organigrama</string>
    <string name="title_activity_vista_mensual">Vista Mensual</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="action_exportar">Ver por mes</string>
    <string name="ajustes">Ajustes</string>
    <string name="titleFecha">Seleccione Fecha</string>
    <string name="GenMasculino">*Hombre</string>
    <string name="GenFemenino">*Mujer</string>
    <string name="asterisco">*Campos obligatorios</string>
    <string name="cbHabilitar">Inhabilitar de Mejores Maestros</string>
    <string name="cbAnciano">Anciano</string>
    <string name="cbsiervo">Siervo Ministerial</string>
    <string name="cbPrecursor">Precursor Regular</string>
    <string name="cbsuper">Superintendente de Grupo</string>
    <string name="cbAuxiliar">Auxiliar de Grupo</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCancelar">Cancelar</string>


    <!-- Menu Nav Drawer -->
    <string name="nav_header_title">Perfil</string>
    <string name="nav_header_subtitle">Usuario</string>
    <string name="menuInicio">Inicio</string>
    <string name="menuAsignacines">Asignaciones</string>
    <string name="menuPublicador">Publicadores</string>
    <string name="menuPerfil">Mi Perfil</string>
    <string name="menuGrupoEstudio">Organigrama</string>
    <string name="menuSubtitle">Personal</string>
    <string name="menuAcerca">Información de App</string>

    <!-- Content Inicio -->
    <string name="tabEvento">Eventos</string>
    <string name="tabTemporizador">Temporizador</string>

    <!-- Content Asignaciones -->
    <string name="tabSala1">Sala 1</string>
    <string name="tabSala2">Sala 2</string>
    <string name="barFecha">Fecha</string>

    <!-- Content Publicadores -->
    <string name="barFiltro">Filtro</string>
    <string name="barBuscar">Buscar</string>
    <string name="menuEditar">Editar</string>
    <string name="menuEliminar">Eliminar</string>

    <!-- Content Ver -->
    <string name="NombrePub">*Nombres: </string>
    <string name="editDatos">Escribir</string>
    <string name="ApellidoPub">*Apellidos: </string>
    <string name="TelefonoPub">Telefono: </string>
    <string name="EmailPub">Correo: </string>
    <string name="ultDiscurso">Último Discurso: </string>
    <string name="ultAyudante">Último Ayudante: </string>
    <string name="ultSustitucion">Última Sustitución: </string>
    <string name="tvHabilitado"> </string>

    <!-- Content Editar Salas -->
    <string name="btnAsignar">IR</string>
    <string name="checkboxVisita">Visita Superintendente</string>
    <string name="checkboxAsamblea">Asamblea</string>
    <string name="checkboxSolo1">Sólo Sala 1</string>

    <!-- Content ResumenSalas -->
    <string name="tvEncargado">Encargado</string>
    <string name="tvAyudante">Ayudante</string>
    <string name="tvAsignacion">Asignación</string>
    <string name="tvLectura">Lectura Bíblica</string>
    <string name="titleSala1">Primera Sala</string>
    <string name="titleSala2">Segunda Sala</string>

    <!-- Fragment Inicio -->
    <string name="ultSemana">Última semana programada</string>
    <string name="proxVisita">Próxima Visita Superintendente</string>
    <string name="titleAsignaciones">Asignaciones de la Semana</string>
    <string name="sinprogramar">Sin programar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sustituir">Sustituir por:</string>

    <string name="duracion">Duración:</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Inicio sesion -->
    <string name="sesioEmail">Correo</string>
    <string name="sesionPsw">Contraseña</string>
    <string name="sesionBtn">Iniciar Sesión</string>

    <!-- Settings -->
    <string-array name="ajustes">
        <item>Mi Perfil</item>
        <item>Notificaciones</item>
    </string-array>


    <string name="ajustes_miperfil">Mi Perfil</string>
    <string name="ajustes_nombrePerfil">Nombre</string>
    <string name="ajustes_labelNombrePerfil">Nombre de Usuario</string>
    <string name="ajustes_btnUpdatePsw">Actualizar\ncontraseña</string>
    <string name="ajustes_notificaciones">Notificaciones</string>

    <string name="fecha_mensual">Fecha</string>
    <string name="lector_mensual">Lector:</string>
    <string name="asignacion1_mensual">Asig. #1:</string>
    <string name="asignacion2_mensual">Asig. #2:</string>
    <string name="asignacion3_mensual">Asig. #3:</string>


    <string name="acerca">Información de App</string>
    <string name="desarrollado">Desarrollado por</string>
    <string name="skysam">Inversiones SkySam, C.A.</string>
    <string name="atencion_cliente">Atención al usuario:</string>
    <string name="contacto">inversionesskysam@gmail.com</string>
    <string name="title_activity_configuraciones">Configuraciones</string>

    <!-- Preference Titles -->
    <string name="perfil_header">Mi Perfil</string>
    <string name="personalizar_header">Personalizar</string>

    <!-- Perfil Preferences -->
    <string name="perfil_title">Tu Nombre de Perfil</string>
    <string name="numero_grupos">N° Grupos</string>
    <string name="actualizar_contrasena">Actualizar contraseña</string>

    <!-- Personalizar Preferences -->
    <string name="notif_title">Permitir Notificaciones</string>
    <string name="vibracion_title">Vibración</string>
    <string name="vibracion_summary_on">Vibrar y sonar al recibir la notificación</string>
    <string name="vibracion_summary_off">Recibir la notificación sólo con sonido</string>
    <string name="tema_title">Tema Oscuro</string>
    <string name="tema_summary_on">Desactivar Modo Oscuro</string>
    <string name="tema_summary_off">Activar Modo Oscuro</string>

    <!-- Acerca Preferences -->
    <string name="acerca_title">Desarrollado por&#8230;</string>



</resources>
