<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menuInicio" />
        <item
            android:id="@+id/nav_asignaciones"
            android:icon="@drawable/ic_menu_asignaciones"
            android:title="@string/menuAsignacines" />
        <item
            android:id="@+id/nav_publicadores"
            android:icon="@drawable/ic_menu_publicador"
            android:title="@string/menuPublicador" />
        <item
            android:id="@+id/nav_grupoEstudio"
            android:icon="@drawable/ic_menu_estudio"
            android:title="@string/menuGrupoEstudio" />
    </group>

    <item android:title="@string/menuSubtitle">
        <menu>

            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/ajustes"/>

            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_menu_acerca"
                android:title="@string/acerca" />
        </menu>
    </item>

</menu>


