<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPubActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEditPub"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/title_activity_editar">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageBtPublicador"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditPub"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEditImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#000"
        android:src="@drawable/ic_addiamge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBtPublicador">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NombrePub"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ApellidoPub"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/TelefonoPub"
            android:inputType="phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/EmailPub"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:autofillHints="" />
    </LinearLayout>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ultDiscurso"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/etfdiscurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/titleFecha"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ultAyudante"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/etfayudante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/titleFecha"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ultSustitucion"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/etfsustitucion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/titleFecha"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout5">

        <RadioButton
            android:id="@+id/radioMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GenFemenino" />

        <RadioButton
            android:id="@+id/radioHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/GenMasculino" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/asterisco"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbHabilitar" />

    <CheckBox
        android:id="@+id/cbHabilitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cbHabilitar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</android.support.constraint.ConstraintLayout>