<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerActivity">

    <ImageView
        android:id="@+id/imageViewPublicador"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPublicador">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/NombrePub"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvApellido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ApellidoPub"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/TelefonoPub"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCorro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/EmailPub"
            android:textSize="20sp" />
    </LinearLayout>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ultDiscurso"
                android:textSize="15sp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewfdiscurso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleFecha"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ultAyudante"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewfayudante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleFecha"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ultSustitucion"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewfsustitucion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleFecha"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHabilitar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:gravity="center_vertical"
                android:text="@string/tvHabilitado"
                android:textSize="15sp" />


        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:backgroundTint="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_cerrar" />

</android.support.constraint.ConstraintLayout>